--- a/yegcomedy.css
+++ b/yegcomedy.css
@@ -2,7 +2,7 @@
 .header{
 	overflow:hidden;
     background-color: #6B0504;
-    font-family: Toight;
+    font-family: Tonight;
 	margin: 0px;
 	padding: 40px;
 	font-size: 75px;
