--- a/yegcomedy.css
+++ b/yegcomedy.css
@@ -170,5 +170,5 @@ body{
 	src: url("Tonight.eot");
 	src: url("Tonight.woff") format(woff);
 	src: url("Tonight.woff2") format(woff2);
-	src: url("Tonight.svg") format(svg);
+	src: url("Tonight.svg#Tonight") format(svg);
 }
