--- a/yegcomedy.css
+++ b/yegcomedy.css
@@ -166,9 +166,9 @@ body{
 
 @font-face{
 	font-family: Tonight;
-	src: url("Tonight.ttf") format(truetype);
-	src: url("Tonight.eot");
-	src: url("Tonight.woff") format(woff);
-	src: url("Tonight.woff2") format(woff2);
-	src: url("Tonight.svg#Tonight") format(svg);
+	src: url("../MrsMaisel/MrsMaisel.github.io/Tonight.tff") format(truetype);
+	src: url("../MrsMaisel/MrsMaisel.github.io/Tonight.eot");
+	src: url("../MrsMaisel/MrsMaisel.github.io/Tonight.woff") format(woff);
+	src: url("../MrsMaisel/MrsMaisel.github.io/Tonight.woff2") format(woff2);
+	src: url("../MrsMaisel/MrsMaisel.github.io/Tonight.svg#Tonight") format(svg);
 }
