--- a/yegcomedy.css
+++ b/yegcomedy.css
@@ -1,3 +1,13 @@
+@font-face{
+	font-family: Tonight;
+	src: url("MrsMaisel/MrsMaisel.github.io/Tonight.tff") format(truetype);
+	     url("MrsMaisel/MrsMaisel.github.io/Tonight.eot");
+	     url("MrsMaisel/MrsMaisel.github.io/Tonight.woff") format(woff);
+	     url("MrsMaisel/MrsMaisel.github.io/Tonight.woff2") format(woff2);
+	     url("MrsMaisel/MrsMaisel.github.io/Tonight.svg#Tonight") format(svg);
+	     local("Tonight");
+}
+
 @media(min-width: 1100px){
 .header{
 	overflow:hidden;
@@ -164,12 +174,4 @@ body{
 	}
 }
 
-@font-face{
-	font-family: Tonight;
-	src: url("../MrsMaisel/MrsMaisel.github.io/Tonight.tff") format(truetype);
-	     url("../MrsMaisel/MrsMaisel.github.io/Tonight.eot");
-	     url("../MrsMaisel/MrsMaisel.github.io/Tonight.woff") format(woff);
-	     url("../MrsMaisel/MrsMaisel.github.io/Tonight.woff2") format(woff2);
-	     url("../MrsMaisel/MrsMaisel.github.io/Tonight.svg#Tonight") format(svg);
-	     local("Tonight");
-}
+
