--- a/yegcomedy.css
+++ b/yegcomedy.css
@@ -1,6 +1,6 @@
 @font-face{
 	font-family: Tonight;
-	src: url('MrsMaisel.github.io/Tonight.tff') format('truetype');
+	src: url('../../MrsMaisel.github.io/Tonight.tff') format('truetype');
 }
 
 @media(min-width: 1100px){
