--- a/yegcomedy.css
+++ b/yegcomedy.css
@@ -8,6 +8,11 @@
 	src: url('NightVibes.ttf') format('truetype');
 }
 
+@font-face{
+	font-family: Quicksand;
+	src: url('Quicksand.ttf') format('truetype');
+}
+
 @media(min-width: 1100px){
 .header{
 	overflow:hidden;
@@ -24,7 +29,7 @@
 	flex-direction: column;
 	justify-content: space-between;
    	background-color: #6B0504;
-    	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+    	font-family: Quicksand;
 	padding: 25px;
 	font-size: 15px;
 	text-align: left;
@@ -39,7 +44,7 @@
 		display:block;
 	}
 	.announcements a.shows{
-		font-family:"Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+		font-family: Quicksand;
 		padding:25px;
 		font-size: 30px;
 		display:block;
@@ -49,7 +54,7 @@
 		
 	}
 		.text a.description{
-		font-family:"Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+		font-family: Quicksand;
 		padding:5px;
 		font-size: 25px;
 		display:block;
@@ -61,7 +66,7 @@
 	
 .header a.active{
 	background-color: #6B0504;
-    font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+    font-family: Quicksand;
 	margin: 0px;
 	padding: 5px;
 	font-size: 25px;
@@ -107,7 +112,7 @@ body{
 		flex-direction: column;
 		justify-content: space-between;
     	background-color: #6B0504;
-    	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+    	font-family: Quicksand;
 		padding: 25px;
 		font-size: 15px;
 		text-align: left;
@@ -117,7 +122,7 @@ body{
 	
 	.header a.active{
 		background-color: #6B0504;
-   		font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+   		font-family: Quicksand;
 		margin: 0px;
 		padding: 5px;
 		font-size: 20px;
@@ -138,7 +143,7 @@ body{
 			text-decoration: none;}
 			
 	.announcements a.shows{
-		font-family:"Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+		font-family: Quicksand;
 		padding:5px;
 		font-size: 25px;
 		display:block;
@@ -149,7 +154,7 @@ body{
 		
 	}
 	.text a.description{
-		font-family:"Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+		font-family: Quicksand;
 		padding:5px;
 		font-size: 20px;
 		display:block;
